# witcherscript-ide

./: .gitattributes  .gitignore  404.html  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_TODO.md  index.html  mkdocs.yml  sitemap.xml
analyzer/: Cargo.toml
analyzer/src/: lib.rs  native_types.rs
analyzer/src/diagnostics/: diagnostic.rs  errors.rs  infos.rs  mod.rs  warnings.rs
analyzer/src/diagnostics/syntax_analysis/: syntax_error_visitor.rs
analyzer/src/jobs/: collect_symbols.rs  inject_native_symbols.rs  mod.rs  scan_symbols.rs
analyzer/src/jobs/collect_symbols/: child_sym_collector.rs  commons.rs  glob_sym_collector.rs  mod.rs
analyzer/src/jobs/syntax_analysis/: mod.rs  syntax_error_visitor.rs
analyzer/src/model/: collections.rs  globals.rs  mod.rs  symbol_path.rs  symbol_variant.rs
analyzer/src/model/collections/: mod.rs  symbol_ctx.rs  symbol_db.rs  symbol_table.rs
analyzer/src/model/symbol_info/: basic_type_info.rs  class_info.rs  enum_info.rs  func_param_info.rs  function_info.rs  mod.rs  param_info.rs  struct_info.rs  type_param_info.rs  var_info.rs
analyzer/src/model/symbols/: array_type_symbol.rs  basic_type_symbol.rs  class_symbol.rs  enum_symbol.rs  func_param_symbol.rs  function_symbol.rs  generic_type_symbol.rs  mod.rs  primitive_type_symbol.rs  state_symbol.rs  struct_symbol.rs  symbol.rs  type_param_symbol.rs  var_symbol.rs
core/: Cargo.toml
core/src/: lib.rs  parser.rs  script.rs  script_document.rs  script_node.rs  span.rs  syntax_error.rs  syntax_node.rs
core/src/ast/: classes.rs  conditionals.rs  enums.rs  error.rs  expressions.rs  functions.rs  loops.rs  mod.rs  module.rs  native_types.rs  nop.rs  operators.rs  root.rs  states.rs  structs.rs  unnamed.rs  vars.rs  visitor.rs
core/src/attribs/: classes.rs  functions.rs  states.rs  structs.rs  vars.rs
core/src/lexing/: README.md  identifier.rs  keywords.rs  literals.rs  mod.rs
core/src/tests/: mod.rs  test_expressions.rs
core/src/tokens/: identifier.rs  keywords.rs  literals.rs  mod.rs  operators.rs  span.rs  unnamed.rs
crates/abs-path/: Cargo.toml
crates/abs-path/src/: lib.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs
crates/analysis/src/diagnostics/: diagnostic.rs  errors.rs  infos.rs  mod.rs  warnings.rs
crates/analysis/src/jobs/: inject_native_symbols.rs  merge_symtabs.rs  mod.rs  scan_symbols.rs  workspace_symbol_analysis.rs
crates/analysis/src/jobs/syntax_analysis/: contextual_analysis.rs  error_inference.rs  mod.rs  syntax_error_visitor.rs
crates/analysis/src/model/: symbol_path.rs  symbol_variant.rs
crates/analysis/src/model/collections/: mod.rs  symbol_ctx.rs  symbol_table.rs
crates/analysis/src/model/symbols/: array_type_symbol.rs  class_symbol.rs  enum_symbol.rs  func_param_symbol.rs  function_symbol.rs  mod.rs  paths.rs  primitive_type_symbol.rs  state_symbol.rs  struct_symbol.rs  symbol.rs  var_symbol.rs
crates/analysis/src/symbol_analysis/: mod.rs  symbol_ctx.rs  symbol_path.rs  unqualified_name_lookup.rs
crates/analysis/src/symbol_analysis/symbol_table/: iter.rs  marcher.rs  mod.rs
crates/analysis/src/symbol_analysis/symbols/: annotated_symbols.rs  array_type_symbol.rs  class_symbol.rs  enum_symbol.rs  func_param_symbol.rs  function_symbol.rs  location.rs  mod.rs  paths.rs  primitive_type_symbol.rs  specifier_bitmask.rs  state_symbol.rs  struct_symbol.rs  symbol.rs  symbol_specifiers.rs  symbol_variant.rs  var_symbol.rs
crates/analysis/src/utils/: mod.rs
crates/analysis/src/utils/visitors/: expr_evaluator.rs  mod.rs  position_filter.rs  position_seeker.rs  sympath_builder.rs
crates/core/: Cargo.toml
crates/core/src/: debug.rs  lib.rs  script.rs  script_document.rs  syntax_node.rs
crates/core/src/ast/: annotation.rs  classes.rs  conditionals.rs  enums.rs  expressions.rs  functions.rs  loops.rs  mod.rs  nop.rs  root.rs  states.rs  structs.rs  vars.rs  visitor.rs
crates/core/src/ast/traversal/: contexts.rs  mod.rs  policies.rs  visitor.rs  visitor_chain.rs
crates/core/src/attribs/: classes.rs  functions.rs  mod.rs  specifier.rs  states.rs  structs.rs  vars.rs
crates/core/src/tokens/: identifier.rs  keywords.rs  literals.rs  mod.rs  operators.rs  unnamed.rs
crates/lsp/: Cargo.toml
crates/lsp/assets/: README.md
crates/lsp/assets/include/: README.md
crates/lsp/assets/include/content0_native/: README.md
crates/lsp/assets/include/content0_native/scripts/native/: array.ws  enums.ws  globals.ws  other.ws  primitives.ws
crates/lsp/assets/include/native_content/scripts/native/: enums.ws  primitives.ws
crates/lsp/assets/native_content/scripts/native/: array.ws  enums.ws  globals.ws  other.ws  primitives.ws
crates/lsp/assets/tests/annotationTesting/annotations1/: witcherscript.toml
crates/lsp/assets/tests/annotationTesting/annotations1/scripts/: annotations.ws
crates/lsp/assets/tests/annotationTesting/annotations2/: witcherscript.toml
crates/lsp/assets/tests/annotationTesting/annotations2/scripts/: annotation_user.ws
crates/lsp/src/: backend.rs  config.rs  main.rs  model.rs  notifications.rs  requests.rs  workspace.rs
crates/lsp/src/indexing/: content_indexing.rs  mod.rs  script_indexing.rs
crates/lsp/src/messaging/: custom_methods.rs  mod.rs  notifications.rs  requests.rs
crates/lsp/src/providers/: common.rs  configuration.rs  document_ops.rs  document_symbols.rs  document_sync.rs  goto.rs  hover.rs  initialization.rs  mod.rs  selection_range.rs  workspace.rs
crates/lsp/src/providers/custom/: debug.rs  mod.rs  projects.rs  scripts.rs
crates/lsp/src/reporting/: diagnostics.rs  logging.rs  mod.rs  notifications.rs
crates/lsp/src/source_management/: contents.rs  mod.rs  scripts.rs
crates/lsp/src/tasks/: content_indexing_tasks.rs  mod.rs  script_analysis_tasks.rs  script_indexing_tasks.rs  symbol_scan_tasks.rs
crates/project/: Cargo.toml
crates/project/src/: content.rs  content_graph.rs  content_repository.rs  content_scanner.rs  file_error.rs  lib.rs  manifest.rs  source_mask.rs  source_tree.rs
crates/project/src/redkit/: manifest.rs  mod.rs
lsp/server/: Cargo.toml
(+139 files in other folders)
