[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["SpontanCombust"]

# any dependencies that are used by more than one crate should be listed here
[workspace.dependencies]
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
shrinkwraprs = "0.3"
ropey = "1.6"
uuid = {version = "1.6", features = ["v4"]}
lsp-types = "0.94.1" # the same version that tower-lsp 0.20.0 uses
dashmap = "5.5"
clap = {version = "4.4", features = ["derive"]}
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
toml = "0.8"
semver = { version = "1.0", features = ["serde"] }
dyn-clone = "1.0"
rayon = "1.9"
bitmask-enum = "2.2.3"
filetime = "0.2.23"
smallvec = "1.13"