[package]
name = "witcherscript-analyzer"
description = "WitcherScript semantic analysis toolset"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
witcherscript = { path = "../core" }
uuid.workspace = true
ropey.workspace = true
thiserror.workspace = true
lsp-types.workspace = true
shrinkwraprs.workspace = true