[package]
name = "witcherscript"
description = "Core library containing the AST and parser"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
shrinkwraprs.workspace = true
ropey.workspace = true
tree-sitter = "0.20"
tree-sitter-witcherscript = { git = "https://github.com/SpontanCombust/tree-sitter-witcherscript.git" }
encoding_rs_io = "0.1"