[package]
name = "witcherscript-analysis"
description = "WitcherScript semantic analysis toolset"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
abs-path = { path = "../abs-path" }
witcherscript = { path = "../core" }
uuid.workspace = true
thiserror.workspace = true
lsp-types.workspace = true
shrinkwraprs.workspace = true
strum.workspace = true
strum_macros.workspace = true