[package]
name = "witcherscript-analysis"
description = "WitcherScript semantic analysis toolset"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
abs-path = { path = "../abs-path" }
witcherscript = { path = "../core" }
witcherscript-project = { path = "../project" }
witcherscript-diagnostics = { path = "../diagnostics" }
thiserror.workspace = true
lsp-types.workspace = true
shrinkwraprs.workspace = true
strum.workspace = true
strum_macros.workspace = true
smallvec.workspace = true