[package]
name = "witcherscript"
description = "Core library with grammar parsing utilities"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
shrinkwraprs.workspace = true
ropey.workspace = true
lsp-types.workspace = true
tree-sitter = "0.20"
encoding_rs_io = "0.1"

[dependencies.tree-sitter-witcherscript]
git = "https://github.com/SpontanCombust/tree-sitter-witcherscript.git"
tag = "v0.8.0"