[package]
name = "witcherscript-lsp"
description = "WitcherScript Language Server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
witcherscript = { path = "../core" }
witcherscript-analysis = { path = "../analysis" }
witcherscript-project = { path = "../project" }
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tower-lsp = "0.20.0"
tokio = { version = "1", features = ["full"] }