[package]
name = "witcherscript-lsp"
description = "WitcherScript Language Server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
witcherscript = { path = "../core" }
witcherscript-analysis = { path = "../analysis" }
witcherscript-project = { path = "../project" }
witcherscript-diagnostics = { path = "../diagnostics" }
abs-path = { path = "../abs-path" }
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
rayon.workspace = true
bitmask-enum.workspace = true
shrinkwraprs.workspace = true
filetime.workspace = true
tower-lsp = "0.20.0"
tokio = { version = "1.38", features = ["macros", "rt", "rt-multi-thread", "io-std", "time"] }