[package]
name = "witcherscript-project"
description = "Utilities for managing the workspace structure, its dependencies and creating script source trees"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
semver.workspace = true
toml-span.workspace = true
thiserror.workspace = true
lsp-types.workspace = true
ropey.workspace = true
dyn-clone.workspace = true
shrinkwraprs.workspace = true