[package]
name = "witcherscript-project"
description = "Utilities for managing the workspace structure, its dependencies and creating script source trees"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
abs-path = { path = "../abs-path" }
semver.workspace = true
toml.workspace = true
serde.workspace = true
thiserror.workspace = true
lsp-types.workspace = true
ropey.workspace = true
dyn-clone.workspace = true
shrinkwraprs.workspace = true