[package]
name = "witcherscript-lsp"
description = "WitcherScript Language Server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
witcherscript = { path = "../../core" }
witcherscript-analyzer = { path = "../../analyzer" }
witcherscript-workspaces = { path = "../../workspaces" }
tower-lsp = "0.20.0"
tokio = { version = "1", features = ["full"] }